# iron-bunny

./: .gitignore  Cargo.toml  Dockerfile  LESSONS_LEARNED.md
dev-fixtures/: config.yaml  mock-containers.yaml
frontend/: components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: utils.ts
frontend/src/lib/components/: ThemeToggle.svelte
frontend/src/lib/components/commands-table/: data-table.svelte  types.ts
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card.svelte
frontend/src/lib/components/ui/checkbox/: checkbox.svelte
frontend/src/lib/components/ui/dialog/: dialog-content.svelte
frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte
frontend/src/lib/components/ui/table/: table-row.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/cmderror/: +page.svelte
src/: api.rs  coordinator.rs  frontend_embed.rs  lib.rs  main.rs  registry.rs  security.rs  watcher.rs
src/config/: app_config.rs  mod.rs
src/db/: mod.rs
src/docker/: client.rs  interpolation.rs  labels.rs  mock.rs  mod.rs
tests/: e2e_test.rs  redirect_test.rs
tests/common/: mod.rs
